<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".activities.HighRiskActivity">


    <ImageView
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:padding="6dp"
        android:src="@drawable/high_risk" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/thank_you_for_taking_this_self_screening_test"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:gravity="center"
        android:text="@string/based_on_your_responses_you_may_have_a_high_risk_of_having_covid_infection"
        android:textColor="#dd2c00"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="#4cbbb9"
        android:text="@string/therefore_a_support_staff_from_the_clinic_will_reach_out_to_you_within_6_hours_by_telephone_and_provide_you_with_the_support_you_need"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="#4cbbb9"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/you_may_need_to_get_tested_be_isolated_and_treated_for_serious_respiratory_illness"
        android:textSize="18sp"
        />


    <Button
        android:id="@+id/highRiskCloseBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/registration_button"
        android:text="@string/close"
        android:textAllCaps="false" />

</LinearLayout>
