<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/covid"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="#4cbbb9"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/covid_19"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#77d8d8"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="User Registration"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!--firstname-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
        <EditText
            android:padding="4dp"
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="First Name"
            android:importantForAutofill="no"
            android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  lastname Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
        <EditText
            android:padding="4dp"
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:hint="Last name"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
             />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif-condensed"
            android:padding="4dp"
            android:text="@string/age"
            android:textColor="#f76a8c"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/age_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:padding="4dp"
                tools:ignore="Autofill,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            android:hint="Email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/intialInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
        <EditText
            android:padding="4dp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="10dp"
            android:hint="Password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
           android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select User Type"
            android:textColor="#f76a8c"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:padding="4dp"
            android:id="@+id/userType_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="4dp"
            android:text="@string/gender"
            android:textColor="#f76a8c"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="4dp"
                    android:text="@string/state"
                    android:textColor="#f76a8c"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/stateSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="textCapWords"
                    android:padding="4dp"
                    android:text="@string/lga"
                    android:textColor="#f76a8c"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextViewEdits" />

                <Spinner
                    android:id="@+id/lgaSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="0.5dp"
            android:background="#c0c0c0" />
        <!-- facility Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif-condensed"
            android:padding="4dp"
            android:text="Facility Name"
            android:textColor="#f76a8c"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/facilitySpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="12dp"
            android:background="#c0c0c0" />
        <!-- Signup Button -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/registration_button"
            android:text="Register" />
        <!--login link-->
        <TextView
            android:id="@+id/loginLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="12dp"
            android:text="Already have an account? Login"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>